--- a/.gitignore
+++ b/.gitignore
@@ -1,93 +1,44 @@
-# Byte-compiled / optimized / DLL files
+# Python
+*.pyc
 __pycache__/
-*.py[cod]
-
-# C extensions
-*.so
-
-# Distribution / packaging
+*.pyo
+*.pyd
 .Python
 env/
 venv/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+ENV/
+venv.bak/
+*env.bak/
+env.bak/
+.venv/
+.venv.bak/
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# DotEnv configuration
+# Environment Variables
 .env
+.venv
 
-# Database
-*.db
-*.rdb
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# Pycharm
-.idea
+# Streamlit
+.streamlit/config.toml
 
-# VS Code
-.vscode/
-*.code-workspace
+# Logs
+*.log
+logs/
 
-# Spyder
-.spyproject/
-
-# Jupyter NB Checkpoints
-.ipynb_checkpoints/
-
-
-# Mac OS-specific storage files
+# OS generated files
 .DS_Store
+Thumbs.db
 
-# vim
-*.swp
-*.swo
-
-# Mypy cache
-.mypy_cache/
-
-# Exlcude the database file
-.db
-/data
+# Packages
+*.egg
+*.egg-info/
+dist/
+build/
+eggs/
+parts/
+var/
+wheels/
+sdist/
+pip-wheel-metadata/
