--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.37.1
-openai==1.40.8
-python-dotenv==1.0.1
-spacy==3.7.5
-sentence-transformers==3.0.1
-scikit-learn==1.5.1
-numpy==1.24.0
-# shelve3==1.0.0
+streamlit
+openai
+pymongo
+python-dotenv
+pytz
+pandas
